apps/cold-case/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cold-case
  labels:
    pod-security.kubernetes.io/enforce: restricted
